--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.10.1",
     "express": "^4.10.7",
+    "mongoose": "^3.8.21",
     "morgan": "^1.5.1"
   }
 }
